[project]
license = {text = "MIT"}
urls.homepage = "https://github.com/AskfmForHumans/afh-bot"
dependencies = [
    "askfm-api==0.2.0b1",
    "pymongo[srv,tls]~=3.11",
]
requires-python = ">=3.9"

[tool.pdm.dev-dependencies]
dev = [
    "black~=20.8b1",
    "isort~=5.8",
]

[tool.pdm.scripts]
_.env_file = ".env"
start = "python -m askfmforhumans"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
skip_gitignore = true
